src/julia.h

typedef struct _jl_value_t jl_value_t;
// Symbols are interned strings (hash-consed) stored as an invasive binary tree.
// The string data is nul-terminated and hangs off the end of the struct.
typedef struct _jl_sym_t {
    JL_DATA_TYPE
    _Atomic(struct _jl_sym_t*) left;
    _Atomic(struct _jl_sym_t*) right;
    uintptr_t hash;    // precomputed hash value
    // JL_ATTRIBUTE_ALIGN_PTRSIZE(char name[]);
} jl_sym_t;
JL_DLLEXPORT void *jl_symbol_name(jl_sym_t *s);
JL_DLLEXPORT jl_value_t *jl_value_ptr(jl_value_t *a);
// arrays
JL_DLLEXPORT jl_array_t *jl_ptr_to_array_1d(jl_value_t *atype, void *data,
                                            size_t nel, int own_buffer);
JL_DLLEXPORT jl_array_t *jl_ptr_to_array(jl_value_t *atype, void *data,
                                         jl_value_t *dims, int own_buffer);
JL_DLLEXPORT jl_value_t *jl_array_to_string(jl_array_t *a);
// property access
JL_DLLEXPORT void *jl_array_ptr(jl_array_t *a);